--- a/index.html
+++ b/index.html
@@ -20,151 +20,174 @@
       	<p><a href="http://conv.denshochan.com/">でんでんコンバーター</a>の<a href="http://conv.denshochan.com/config">設定ファイル</a> <code>ddconv.yml</code> を手軽に作成できます</p>
         <div class="row">
         	<div class="col-sm-6">
-        		<div class="form-group" v-for="(title, index) in metadata.titles">
-        			<label>タイトル</label>
-        			<input class="form-control form-control-sm" type="text" v-model="title.content" placeholder="タイトルを入れてね" required/>
+        		<div class="card mb-2">
+        			<div class="card-block">
+        		    <div class="form-group" v-for="(title, index) in metadata.titles">
+        			    <label>タイトル</label>
+        			    <input class="form-control form-control-sm" type="text" v-model="title.content" placeholder="タイトルを入れてね" required/>
+        		    </div>
+        			</div>
         		</div>
-        		<div class="form-group" v-for="(creator, index) in metadata.creators">
-        			<div>
-        			  <label>作成者{{index + 1}}</label>
-        			  <button 
-        			    v-if="index > 0"
-        			    v-on:click="metadata.creators.splice(index, 1)"
-        			    class="btn btn-sm btn-secondary">
-        			      <i class="fa fa-times" aria-hidden="true"></i> 削除
-        			  </button>
-        			  <div class="form-group">
-        				  <input class="form-control form-control-sm" type="text" v-model="creator.content" placeholder="名前" />
-        			  </div>
-        			  <div class="form-group">
-        				  <select class="form-control form-control-sm" v-model="creator.role">
-        		  		  <option value="">役割指定なし</option>
-        		  	    <option value="aut">著者</option>
-        		  	    <option value="edt">編集</option>
-        		  	    <option value="edt">監修</option>
-        		  	    <option value="trl">翻訳</option>
-        		  	    <option value="ill">イラスト</option>
-        		  	    <option value="aut">原著</option>
-        		  	    <option value="cre">企画・原案</option>
-        		  	    <option value="pht">写真</option>
-        		  	    <option value="cwt">解説</option>
-        		  	    <option value="nrt">朗読</option>
-        				  </select>
-        			  </div>
+        		<div class="card mb-2">
+        			<div class="card-block">
+        		    <div class="form-group" v-for="(creator, index) in metadata.creators">
+        			    <label>作成者{{index + 1}}</label>
+        			    <button 
+        			      v-if="index > 0"
+        			      v-on:click="metadata.creators.splice(index, 1)"
+        			      class="btn btn-sm btn-outline-danger">
+        			        <i class="fa fa-times" aria-hidden="true"></i> 削除
+        			    </button>
+        			    <div class="form-group">
+        				    <input class="form-control form-control-sm" type="text" v-model="creator.content" placeholder="名前" />
+          			  </div>
+          			  <div class="form-group">
+          				  <select class="form-control form-control-sm" v-model="creator.role">
+          		  		  <option value="">役割指定なし</option>
+          		  	    <option value="aut">著者</option>
+        	  	  	    <option value="edt">編集</option>
+        		    	    <option value="edt">監修</option>
+        		    	    <option value="trl">翻訳</option>
+        		  	      <option value="ill">イラスト</option>
+        		  	      <option value="aut">原著</option>
+        		  	      <option value="cre">企画・原案</option>
+        		  	      <option value="pht">写真</option>
+        		  	      <option value="cwt">解説</option>
+        		  	      <option value="nrt">朗読</option>
+        				    </select>
+        		      </div>
+        		    </div>
+        		    <div class="form-group">
+        		      <button
+        		        class="btn btn-sm btn-outline-success"
+        		        v-on:click="addNewCreator"
+        		        >
+        		        <i class="fa fa-plus" aria-hidden="true"></i> 作成者を追加する
+        		      </button>
+        		    </div>
+        			</div>
+        		</div>
+        		<div class="card mb-2">
+        		  <div class="card-block">
+        		    <div class="form-group">
+        		    	<label>出版者</label>
+        		    	<input class="form-control form-control-sm" type="text" v-model="metadata.publisher" placeholder="出版者名" />
+        		    </div>
         		  </div>
         		</div>
-        		<div class="form-group">
-        		  <button
-        		    class="btn btn-sm btn-secondary"
-        		    v-on:click="addNewCreator"
-        		    >
-        		    <i class="fa fa-plus" aria-hidden="true"></i> 作成者を追加する
-        		  </button>
-        		</div>
-        		<hr>
-        		<div class="form-group">
-        			<label>出版者</label>
-        			<input class="form-control form-control-sm" type="text" v-model="metadata.publisher" placeholder="出版者名" />
-        		</div>
-        		<div class="form-group">
-        			<label>言語</label>
-        			<select class="form-control form-control-sm" v-model="metadata.language">
-        			  <option value="ja">日本語</option>
-        			  <option value="en">英語</option>
-        			</select>
-        		</div>
-        		<div class="form-group">
-        			<label>ページ送り方向</label>
-        			<select class="form-control form-control-sm" v-model="metadata.pageDirection">
-        			  <option value="ltr">左から右(横書き)</option>
-        			  <option value="rtl">右から左(縦書き)</option>
-        			</select>
-        		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.titlepage"/>
-        				扉ページを自動生成する
-        			</label>
-        		</div>
-        		<div class="form-check">
-        			<div class="form-group">
-        			  <label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.tocInSpine"/>
-        				目次ページを自動生成する
-        			  </label>
-        			</div>
-        			<div class="form-group">
-        			  <select class="form-control form-control-sm" v-model.number="metadata.options.tocDisplayDepth">
-        			  	<optgroup label="目次の階層の深さ">
-        				    <option value="1">1</option>
-        				    <option value="2">2</option>
-        				    <option value="3">3</option>
-        				    <option value="4">4</option>
-        				    <option value="5">5</option>
-        				    <option value="6">6（推奨）</option>
-        				  </<optgroup>
-        			  </select>
-        			</div>
-        		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLandmarksNav"/>
-        				目次ページにランドマークナビゲーションを表示する
-        			</label>
-        		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLoiNav"/>
-        				目次ページに図版一覧を表示する
-        			</label>
-        		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLotNav"/>
-        				目次ページに表一覧を表示する
-        			</label>
-        		</div>
-        		<div class="form-check">
-        			<div class="form-group">
-        			  <label class="form-check-label">
-        				  <input class="form-check-input" type="checkbox" v-model="metadata.options.autoTcy"/>
-        				自動縦中横を有効にする
-        			  </label>
+        		<div class="card mb-2">
+        		  <div class="card-block">
+        		    <div class="form-group">
+        			    <label>言語</label>
+        			    <select class="form-control form-control-sm" v-model="metadata.language">
+        			      <option value="ja">日本語</option>
+        			      <option value="en">英語</option>
+        			    </select>
+        		    </div>
         		  </div>
-        			<div class="form-group">
-        			  <select class="form-control form-control-sm" v-model.number="metadata.options.tcyDigit">
-        			  	<optgroup label="縦中横にする数字の上限桁数">
-        				    <option value="2">2桁</option>
-        				    <option value="3">3桁</option>
-        				    <option value="4">4桁</option>
-        				  </optgroup>
-        			  </select>
-        			</div>
         		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.kepub"/>
-        				拡張子を<code>.kepub.epub</code>にする
-        			</label>
+        		<div class="card mb-2">
+        		  <div class="card-block">
+        		    <div class="form-group">
+        			    <label>ページ送り方向</label>
+        			    <select class="form-control form-control-sm" v-model="metadata.pageDirection">
+        			      <option value="ltr">左から右(横書き)</option>
+        			      <option value="rtl">右から左(縦書き)</option>
+        			    </select>
+        		    </div>
+        		  </div>
         		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.options.autoSentenceWrap"/>
-        				文を句点ごとに<code>span</code>で囲む
-        			</label>
+        		<div class="card mb-2">
+        		  <div class="card-block">
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.titlepage"/>
+        		    		扉ページを自動生成する
+        		    	</label>
+        		    </div>
+        		    <div class="form-check">
+        		    	<div class="form-group">
+        		    	  <label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.tocInSpine"/>
+        		    		目次ページを自動生成する
+        		    	  </label>
+        		    	</div>
+        		    	<div class="form-group">
+        		    	  <select class="form-control form-control-sm" v-model.number="metadata.options.tocDisplayDepth">
+        		    	  	<optgroup label="目次の階層の深さ">
+        		    		    <option value="1">1</option>
+        		    		    <option value="2">2</option>
+        		    		    <option value="3">3</option>
+        		    		    <option value="4">4</option>
+        		    		    <option value="5">5</option>
+        		    		    <option value="6">6（推奨）</option>
+        		    		  </<optgroup>
+        		    	  </select>
+        		    	</div>
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLandmarksNav"/>
+        		    		目次ページにランドマークナビゲーションを表示する
+        		    	</label>
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLoiNav"/>
+        		    		目次ページに図版一覧を表示する
+        		    	</label>
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.displayLotNav"/>
+        		    		目次ページに表一覧を表示する
+        		    	</label>
+        		    </div>
+        		    <div class="form-check">
+        		    	<div class="form-group">
+        		    	  <label class="form-check-label">
+        		    		  <input class="form-check-input" type="checkbox" v-model="metadata.options.autoTcy"/>
+        		    		自動縦中横を有効にする
+        		    	  </label>
+        		      </div>
+        		    	<div class="form-group">
+        		    	  <select class="form-control form-control-sm" v-model.number="metadata.options.tcyDigit">
+        		    	  	<optgroup label="縦中横にする数字の上限桁数">
+        		    		    <option value="2">2桁</option>
+        		    		    <option value="3">3桁</option>
+        		    		    <option value="4">4桁</option>
+        		    		  </optgroup>
+        		    	  </select>
+        		    	</div>
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.kepub"/>
+        		    		拡張子を<code>.kepub.epub</code>にする
+        		    	</label>
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.options.autoSentenceWrap"/>
+        		    		文を句点ごとに<code>span</code>で囲む
+        		    	</label>
+        		    </div>
+        		  </div>
         		</div>
-        		<hr>
-        		<div class="form-group">
-        			<label>本のバージョン（iBooks用）</label>
-        			<input class="form-control form-control-sm" type="text" v-model="metadata.ibooks.version" placeholder="バージョン番号" />
+        		<div class="card mb-2">
+        		  <div class="card-block">
+        		    <div class="form-group">
+        		    	<label>本のバージョン（iBooks用）</label>
+        		    	<input class="form-control form-control-sm" type="text" v-model="metadata.ibooks.version" placeholder="バージョン番号" />
+        		    </div>
+        		    <div class="form-check">
+        		    	<label class="form-check-label">
+        		    		<input class="form-check-input" type="checkbox" v-model="metadata.ibooks.specifiedFonts"/>
+        		    		埋め込みフォントが使われていれば有効にする（iBooks用）
+        		    	</label>
+        		    </div>
+        		  </div>
         		</div>
-        		<div class="form-check">
-        			<label class="form-check-label">
-        				<input class="form-check-input" type="checkbox" v-model="metadata.ibooks.specifiedFonts"/>
-        				埋め込みフォントが使われていれば有効にする（iBooks用）
-        			</label>
-        		</div>
-        		<hr class="hidden-sm-up">
         	</div>
         	<div class="col-sm-6">
         		<div class="form-group">
