--- a/index.html
+++ b/index.html
@@ -28,22 +28,53 @@
   <body>
     <nav class="navbar navbar-toggleable-md inverse bg-inverse">
       <div class="container">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <h1 class="navbar-brand mb-0" style="color:white">でんでんコンフィギュレーター</h1>
-        <span class="navbar-text" style="color:gray">設定ファルでもっと便利に </span>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <span class="navbar-text" style="color:gray">設定ファルでもっと便利に </span>
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" 
+                title="でんでんコンバーター"
+                data-toggle="tooltip" data-placement="bottom"
+                href="http://conv.denshochan.com/">CNV</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" 
+                title="でんでんマークダウン"
+                data-toggle="tooltip" data-placement="bottom"
+                href="http://conv.denshochan.com/markdown">MD</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"
+                title="でんでんエディター"
+                data-toggle="tooltip" data-placement="bottom"
+                href="http://edit.denshochan.com/">EDT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"
+                title="でんでんランディングページ"
+                data-toggle="tooltip" data-placement="bottom"
+                href="http://lp.denshochan.com/">LP</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div id="form" class="container mt-4">
       <p>
         <a href="http://conv.denshochan.com/">でんでんコンバーター</a>の
         <a href="http://conv.denshochan.com/config">設定ファイル</a>
-        <code>ddconv.yml</code>を手軽に作成できます
+        <code>ddconv.yml</code>を手軽に作成できます。
       </p>
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
             <div class="card-block">
               <div class="form-group row" v-for="(title, index) in metadata.titles">
-                <label class="col-sm-4 col-form-label">タイトル</label>
+                <label class="col-sm-4 col-form-label">タイトル <span class="small text-danger">必須</span></label>
                 <div class="col-sm-8">
                   <input class="form-control form-control-sm" type="text" v-model="title.content" placeholder="タイトルを入れてね" required/>
                 </div>
@@ -396,6 +427,11 @@
         </div>
       </div>
     </footer>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
