change placeholder color

--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
       body {
         font-size: 14px;
       }
-          .btn:hover {
-            cursor: pointer;
-          }
-          .btn:disabled {
-            cursor: auto;
-          }
-          .card-block .form-group:last-child {
-            margin-bottom: 0;
-          }
-        </style>
+      .btn:hover {
+        cursor: pointer;
+      }
+      .btn:disabled {
+        cursor: auto;
+      }
+      .card-block .form-group:last-child {
+        margin-bottom: 0;
+      }
+      .form-control::placeholder {
+        color: #aaa;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md inverse bg-inverse">
