--- a/index.html
+++ b/index.html
@@ -345,6 +345,11 @@
                     <input class="form-check-input" type="checkbox" v-model="metadata.options.displayLotNav"/>&nbsp;目次ページに表一覧を表示する 
                   </label>
                 </div>
+                <div class="form-check">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" v-model="metadata.options.skipCover"/>&nbsp;表紙ページをスキップする 
+                  </label>
+                </div>
                 <div class="row">
                   <div class="col-sm-6 form-check">
                     <label class="form-check-label">
