--- a/index.html
+++ b/index.html
@@ -378,6 +378,11 @@
                     <code>span</code>で囲む
                   </label>
                 </div>
+                <div class="form-check">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" v-model="metadata.options.aozoraRuby"/>&nbsp;青空文庫のルビ記法を使用する
+                  </label>
+                </div>
               </div>
             </div>
           </div>
